--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <center>
-    <h1>Error Makes Clever Academy🚀</h1>
+    <h1>THIS IS MITHUNKUMAR FIRST PROJECT🚀</h1>
     <h2>Training|Tech News|Freshers Guide</h2>
     <p>
         Empowering young developers to level up their skills through training in software development
